# simdjson_secret_tests

./: CMakeLists.txt  fuzzer.cpp
key_selector_stress/: CMakeLists.txt  run_tests.sh
key_selector_stress/include/: json_builder.hpp  test_framework.hpp
key_selector_stress/scripts/: generate_adversarial_tests.py  generate_headers.py
key_selector_stress/src/: main.cpp  test_adversarial.cpp  test_for_each_scenarios.cpp  test_long_keys.cpp  test_many_keys.cpp  test_matchers.cpp  test_static_deserialization.cpp
